# hank

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .vale.ini  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  index.html  justfile  print.html  release-plz.toml  searchindex.js  toc.html  toc.js
.github/workflows/: ci.yml  docs.yml  release.yml
.vale/styles/Vocab/hank/: accept.txt
concepts/: architecture.html  promotion.html  tenancy-model.html  tiers-and-freshness.html
design/: governed-relations.html  policy-edit-hooks.html  specification.html  vision.html  workflow-gated-edits.html
docs/: hank-spec.md  vision.md
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md
docs/book/src/concepts/: architecture.md  promotion.md  tenancy-model.md  tiers-and-freshness.md
docs/book/src/design/: governance-plane.md  governed-relations.md  policy-edit-hooks.md  specification.md  vision.md  workflow-gated-edits.md
docs/book/src/getting-started/: configuration.md  harness-integration.md  installation.md  quick-start.md
docs/book/src/reference/: cli.md  config.md  contributing.md  daemon.md  mcp-tools.md  policy-guard.md
getting-started/: configuration.html  harness-integration.html  installation.html  quick-start.html
reference/: cli.html  config.html  contributing.html  daemon.html  mcp-tools.html  policy-guard.html
scripts/: check-code-shapes.sh  precommit-mdbook.sh
shapes/: code-edges.ttl
shapes/fixtures/: conforming.ttl  violating.ttl
src/: change.rs  cli.rs  cli_cmds.rs  community.rs  config.rs  dataflow.rs  docref.rs  errors.rs  export.rs  export_test.rs  extract.rs  git.rs  graph.rs  hook.rs  lib.rs  main.rs  metrics.rs  policy.rs  project.rs  promote.rs  reconcile.rs  render.rs  rules.rs  textrules.rs  types.rs  verdict.rs  watch.rs
src/daemon/: client.rs  http.rs  http_test.rs  mod.rs  tenanted.rs  wire.rs
src/extract/: cpp.rs  go.rs  java.rs  mod.rs  python.rs  query.rs  rust.rs  typescript.rs
src/graph/: base.rs  blast.rs  community.rs  lookup.rs  mod.rs  overlay.rs  tenant.rs
src/hook/: measure.rs  mod.rs  post_edit.rs  pre_edit.rs
src/mcp/: mod.rs  resident.rs  server.rs  server_test.rs  tools.rs  transport.rs
src/verify/: buffer.rs  mod.rs
src/watch/: mod.rs  overlay_refresh.rs  overlay_refresh_test.rs  schedule.rs
tests/: cli.rs  daemon.rs  docs_drift.rs  overlay_isolation_tests.rs  shape_agreement.rs  tier_tags.rs
